# cf

./: .codacy.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.cypilot/config/: artifacts.toml
.github/workflows/: api_contracts.yml  ci.yml  cypilot.yml  e2e.yml  fmt.yml  gts-validation.yml  release-plz.yml
config/: e2e-tr-authz.yaml  mini-chat.yaml  quickstart-windows.yaml  quickstart.yaml  server.yaml
docs/: ARCHITECTURE_MANIFEST.md
docs/api/: api.json
docs/arch/authorization/: AUTHZ_USAGE_SCENARIOS.md  DESIGN.md  TENANT_MODEL.md
docs/modkit_unified_system/: README.md
docs/security/: SECURITY.md
libs/modkit/: Cargo.toml
libs/modkit-auth/: Cargo.toml
libs/modkit-canonical-errors/: Cargo.toml
libs/modkit-canonical-errors/src/: builder.rs  problem.rs
libs/modkit-canonical-errors/tests/: axum_integration.rs  utoipa_integration.rs
libs/modkit-db/: Cargo.toml
libs/modkit-errors-macro/: Cargo.toml
libs/modkit-http/: Cargo.toml
libs/modkit-node-info/: Cargo.toml
libs/modkit-odata/: Cargo.toml
libs/modkit-odata-macros/: Cargo.toml
libs/modkit-sdk/: Cargo.toml
libs/modkit-security/src/: access_scope.rs
libs/modkit-transport-grpc/: Cargo.toml
libs/system-sdks/: Cargo.toml
modules/file-parser/: Cargo.toml
modules/system/account-management/account-management-sdk/: Cargo.toml
modules/system/account-management/account-management-sdk/src/: gts.rs  idp.rs  idp_tests.rs  lib.rs  tenant.rs  tenant_tests.rs
testing/e2e/: conftest.py  pytest.ini  requirements.txt
tools/dylint_lints/: Cargo.toml
tools/scripts/: ci.py
(+311 files in other folders)
